# stream-feature-store

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: Run_in_Colab.ipynb
src/featurestore/: __init__.py  aggregations.py  api.py  cli.py  data.py  engine.py  store.py  windows.py
tests/: test_aggregations.py  test_data_and_api.py  test_engine.py  test_pointintime.py  test_windows.py
